@startuml US12-DM
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

hide circle
hide methods

class Citizen {
    name
    email
}

class "Political Agent" as PoliticalAgent {
    name
    email
    nationalIdentityCard
    taxIdentificationNumber
    mandateStart
    mandateEnd
}

class Complaint {
    submissionDate
}

class ComplaintItem {
    description
    complaintDate
}

enum PoliticalFunction {
    MINISTER
    DEPUTY
    COUNCILLOR
    PARISH_COUNCIL_PRESIDENT
    MAYOR
}

Citizen "1" -- "*" Complaint : submits
Complaint "*" -- "1" PoliticalAgent : targets
Complaint "1" *-- "1..*" ComplaintItem : groups
ComplaintItem "*" -- "1" PoliticalFunction : references

@enduml
